# Albion-Script

./: .gitignore  AttendenceCheck.gs  MemberListCheck.gs  README.md  RegearChestCheck.gs  RegearChestCheckIfMember.gs  git_push.sh  git_push_correctly.sh
attendance-bot-for-griffin-empire/: .gitignore  attendance-bot-for-griffin-empire.py  attendance_data_20250418_052109.csv  build.sh  generate_key.py  git-update-and-push.sh  pyproject.toml  run.py  run_build.bat  run_python_main.bat  settings.json.broken  temp_wordlist.txt
attendance-bot-for-griffin-empire/botcore/: cache.py  config.py  daily_summary.py  fetch_attendance.py  fetch_guild_members.py  fetch_ocr_attendance.py  fetch_screenshot_attendance.py  fetch_textfile_attendance.py  fetch_web_attendance.py  generate_report.py  log.py  logger.py  ocr_processing.py  ocr_utils.py  process_screenshot.py  process_textfile.py  report.py  safe_namespace.py  screenshot_ocr.py  utils.py
attendance-bot-for-griffin-empire/botcore/config/: constant.py  settings.py  static_settings.py
attendance-bot-for-griffin-empire/botcore/core/: auth_manager.py  cache.py  daily_summary.py  fetch_daily_attendance.py  fetch_guild_members.py  fetch_killboard_attendance.py  fetch_screenshot_attendance.py  fetch_web_attendance.py  generate_report.py  log.py  logger.py  process_screenshot.py  process_textfile.py  utils.py
attendance-bot-for-griffin-empire/debug_ocr_versions/: 04-04-2025.rar
attendance-bot-for-griffin-empire/gui/: interface.py  trial_interface.py  trial_notice_interface.py  trial_warning.py
attendance-ocr-bot/: .gitignore  (+5 more)
(+35 files in other folders)
