[project]
name = "attendance-bot-for-griffin-empire"
version = "0.1.0"
description = "Attendance bot for Griffin Empire Guild created by DragonTaki"
authors = [
    {name = "DragonTaki",email = "synasaivaltos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
